service-discover/services/bar-services.yml
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
  - port: 3000
    targetPort: 3000
