service-discover/services/foo-services.yml
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
  
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
