service-discover/services/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
  - port: 3000
    targetPort: 3000


---



apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  type: ClusterIP
  selector:
    app: foo
  ports:
  
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
