service-discover/services/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /foo  
        backend:
          serviceName: foo
          servicePort: 3000
      - path: /bar  
        backend:
          serviceName: bar
          servicePort: 3000
